--- a/styles.css
+++ b/styles.css
@@ -94,10 +94,11 @@ header .arrow-down{
     position: absolute;
     height: 8px;
     width: 110%;
-    left: 5%;
-    bottom: 1%;
-    
+    left: -5%;
+    bottom: -6%;
+    z-index: -1;
+    opacity: .4;
 }
-.line_yellow{
+.line-yellow{
     background-color: var(--yellow);
 }
