--- a/styles.css
+++ b/styles.css
@@ -266,7 +266,7 @@ footer>ul{
         background-color: var(--white);
         width: 100px;
         height: 40px;
-        border-radius: 48%;
+        border-radius: 50px;
         font-family: var(--title-font);
         font-weight: 600;
     }
@@ -276,13 +276,57 @@ footer>ul{
     }
     .info{
         display: grid;
+        padding: 0;
     }
     .info .egg-info{
         display: flex;
         flex-direction: row-reverse;
         width: 100%;
+        height: 100%;
     }
     .egg-info img{
         width: 50vw;
+    }
+    .info .mug-info{
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        height: 100%;
+    }
+    .mug-info img{
+        width: 50vw;
+    }
+    .description{
+        height: 100%;
+        width: 50%;
+        text-align: center;
+        justify-content: center;
+    }
+    .photo{
+        display: flex;
+        flex-direction: row;
+    }
+    .container.graphic{
+        width: 50vw;
+        background-image: url(./images/desktop/image-graphic-design.jpg);
+    }
+    .container.photography{
+        width: 50vw;
+        background-image: url(./images/desktop/image-photography.jpg);
+    }
+    .container.graphic .description{
+        margin-left: 12vw;
+    }
+    .container.photography .description{
+        margin-left: 12vw;
+        margin-top: -4vh;
+    }
+    #clients{
+        display: flex;
+        flex-direction: row;
+    }
+    .gallery{
+        display: flex;
+        flex-direction: row;
     }
 }
